--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-native-community/slider": "^5.0.1",
     "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
     "lottie-react-native": "^7.3.4",
