--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
+    "axios": "^1.12.2",
     "lottie-react-native": "^7.3.4",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
@@ -26,6 +27,7 @@
     "react-native-bootsplash": "^6.3.11",
     "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
@@ -53,6 +55,7 @@
     "@types/jest": "^29.5.13",
     "@types/node": "^24.8.1",
     "@types/react": "^19.1.0",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
