--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-svg": "^15.14.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.6.1",
+    "react-native-document-picker": "^9.1.0",
     "tailwindcss": "^3.4.18",
     "zod": "^4.1.12"
   },
