--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
     "lottie-react-native": "^7.3.4",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "^0.71.12",
+    "react-native": "0.81.4",
     "react-native-bootsplash": "^6.3.11",
     "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-document-picker": "^9.3.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
