--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lottie-react-native": "^7.3.4",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.0",
+    "react-native": "^0.71.12",
     "react-native-bootsplash": "^6.3.11",
     "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
