refactor api calls

--- a/ios/ROG_Creator_App/Info.plist
+++ b/ios/ROG_Creator_App/Info.plist
@@ -32,7 +32,9 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>l</string>
+	<string>We need your location to suggest the best city for you.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We need your location to suggest the best city for you.</string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
