--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-bootsplash": "^6.3.11",
     "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-document-picker": "^9.3.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
