--- a/ios/ROG_Creator_App/Info.plist
+++ b/ios/ROG_Creator_App/Info.plist
@@ -51,6 +51,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.rogcreator.app</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>rogcreator</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
